<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, code777!</string>
    <string name="app_name">Code777</string>
    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>
    <string name="player3">Player 3</string>
    <string name="player4">Player 4</string>
    <string name="start">Start</string>
    <string name="guess">Guess</string>
    <string name="unknown">\?</string>
    <string name="empty"> </string>
    <string name="next">Next Turn</string>
    <string name="questions">Questions List</string>
    <string name="q1">1: On how many racks is the sum of the numbers 18 or more?</string>
	<string name="q2">2: On how many racks is the sum of the numbers 12 or less?</string>
	<string name="q3">3: On how many racks is there a same number in the different colors?</string>
	<string name="q4">4: On how many racks are there 3 different colors?</string>
	<string name="q5">5: On how many racks are the numbers either all even or all uneven?</string>
	<string name="q6">6: On how many racks are there at least 2 identical cards? </string>
	<string name="q7">7: On how many racks do you see 3 consecutive numbers?</string>
	<string name="q8">8: How many colors do you see?</string>
	<string name="q9">9: How many colors appear at least 3 times?</string>
	<string name="q10">10: How many numbers are missing?</string>
	<string name="q11">11: How many of the following do you see in all: green 1, black 5, red 7?</string>
	<string name="q12">12: Do you see more 3s or more red 6s?</string>
	<string name="q13">13: Do you see more green 6s or more yellow 7s?</string>
	<string name="q14">14: Do you see more yellow 2s or more yellow 7s?</string>
	<string name="q15">15: Do you see more orange 6s or more green 6s?</string>
	<string name="q16">16: Do you see more blue 7s or more 7s of other colors?</string>
	<string name="q17">17: Do you see more brown or more blue numbers?</string>
	<string name="q18">18: Do you see more red or more orange numbers?</string>
	<string name="q19">19: Do you see more green or more blue numbers?</string>
	<string name="q20">20: Do you see more yellow or more orange numbers?</string>
	<string name="q21">21: Do you see more black or more brown numbers?</string>
	<string name="q22">22: Do you see more black or more red numbers?</string>
	<string name="q23">23: Do you see more green or more yellow numbers?</string>
	<string name="answer1">Answer 1: </string>
	<string name="answer2">Answer 2: </string>
	<string name="answer3">Answer 3: </string>
	<string name="answer4">Answer 4: </string>
	<string name="answer5">Answer 5: </string>
	<string name="answer6">Answer 6: </string>
	<string name="answer7">Answer 7: </string>
	<string name="answer8">Answer 8: </string>
	<string name="answer9">Answer 9: </string>
	<string name="answer10">Answer 10: </string>
	<string name="answer11">Answer 11: </string>
	<string name="answer12">Answer 12: </string>
	<string name="answer13">Answer 13: </string>
	<string name="answer14">Answer 14: </string>
	<string name="answer15">Answer 15: </string>
	<string name="answer16">Answer 16: </string>
	<string name="answer17">Answer 17: </string>
	<string name="answer18">Answer 18: </string>
	<string name="answer19">Answer 19: </string>
	<string name="answer20">Answer 20: </string>
	<string name="answer21">Answer 21: </string>
	<string name="answer22">Answer 22: </string>
	<string name="answer23">Answer 23: </string>
    
</resources>
