<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="wrap_content" android:background="@drawable/background" android:id="@+id/tiles">

	<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent">
	
		<TableLayout
			android:id="@+id/tiles"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content">
			
			<TableRow>
				<CheckBox 
					android:id="@+id/checkBox1" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content" android:text="@string/answer1">
				</CheckBox>
				<EditText 
					android:text="" 
					android:id="@+id/editText1" 
					android:layout_width="200dp" 
					android:layout_height="wrap_content">
				</EditText>
				<Button android:layout_height="wrap_content" 
					android:id="@+id/back" 
					android:text="Back" 
					android:layout_width="90dp">
				</Button>
			</TableRow>
			
			<TableRow>
				<CheckBox 
					android:id="@+id/checkBox2" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content" 
					android:text="@string/answer2">
				</CheckBox>
				<EditText 
					android:text="" 
					android:id="@+id/editText2" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content">
				</EditText>
			</TableRow>
			<TableRow>
				<CheckBox 
					android:id="@+id/checkBox3" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content" android:text="@string/answer3">
				</CheckBox>
				<EditText 
					android:text="" 
					android:id="@+id/editText3" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content">
				</EditText>
			</TableRow>
			<TableRow>
				<CheckBox 
					android:id="@+id/checkBox4" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content" android:text="@string/answer4">
				</CheckBox>
				<EditText 
					android:text="" 
					android:id="@+id/editText4" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content">
				</EditText>
			</TableRow>
			<TableRow>
				<CheckBox 
					android:id="@+id/checkBox5" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content"
					android:text="@string/answer5">
				</CheckBox>
				<EditText 
					android:text="" 
					android:id="@+id/editText5" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content">
				</EditText>
			</TableRow>
			<TableRow>
				<CheckBox 
					android:text="@string/answer6" 
					android:id="@+id/checkBox6" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content">
				</CheckBox>
				<EditText 
					android:text="" 
					android:id="@+id/editText6" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content">
				</EditText>
			</TableRow>
			<TableRow>
				<CheckBox 
					android:text="@string/answer7" 
					android:id="@+id/checkBox7" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content">
				</CheckBox>
				<EditText 
					android:text="" 
					android:id="@+id/editText7" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content">
				</EditText>
			</TableRow>
			<TableRow>
				<CheckBox 
					android:text="@string/answer8" 
					android:id="@+id/checkBox8" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content">
				</CheckBox>
				<EditText 
					android:text="" 
					android:id="@+id/editText8" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content">
				</EditText>
			</TableRow>
			<TableRow>
				<CheckBox 
					android:text="@string/answer9" 
					android:id="@+id/checkBox9" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content">
				</CheckBox>
				<EditText 
					android:text="" 
					android:id="@+id/editText9" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content">
				</EditText>
			</TableRow>
			<TableRow>
				<CheckBox 
					android:text="@string/answer10" 
					android:id="@+id/checkBox10" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content">
				</CheckBox>
				<EditText 
					android:text="" 
					android:id="@+id/editText10" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content">
				</EditText>
			</TableRow>
			<TableRow>
				<CheckBox 
					android:text="@string/answer11" 
					android:id="@+id/checkBox11" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content">
				</CheckBox>
				<EditText 
					android:text="" 
					android:id="@+id/editText11" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content">
				</EditText>
			</TableRow>
			<TableRow>
				<CheckBox 
					android:text="@string/answer12" 
					android:id="@+id/checkBox12" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content">
				</CheckBox>
				<EditText 
					android:text="" 
					android:id="@+id/editText12" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content">
				</EditText>
			</TableRow>
			<TableRow>
				<CheckBox 
					android:text="@string/answer13" 
					android:id="@+id/checkBox13" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content">
				</CheckBox>
				<EditText 
					android:text="" 
					android:id="@+id/editText13" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content">
				</EditText>
			</TableRow>
			<TableRow>
				<CheckBox 
					android:text="@string/answer14" 
					android:id="@+id/checkBox14" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content">
				</CheckBox>
				<EditText 
					android:text="" 
					android:id="@+id/editText14" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content">
				</EditText>
			</TableRow>
			<TableRow>
				<CheckBox 
					android:text="@string/answer15" 
					android:id="@+id/checkBox15" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content">
				</CheckBox>
				<EditText 
					android:text="" 
					android:id="@+id/editText15" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content">
				</EditText>
			</TableRow>
			<TableRow>
				<CheckBox 
					android:text="@string/answer16" 
					android:id="@+id/checkBox16" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content">
				</CheckBox>
				<EditText 
					android:text="" 
					android:id="@+id/editText16" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content">
				</EditText>
			</TableRow>
			<TableRow>
				<CheckBox 
					android:text="@string/answer17" 
					android:id="@+id/checkBox17" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content">
				</CheckBox>
				<EditText 
					android:text="" 
					android:id="@+id/editText17" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content">
				</EditText>
			</TableRow>
			<TableRow>
				<CheckBox 
					android:text="@string/answer18" 
					android:id="@+id/checkBox18" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content">
				</CheckBox>
				<EditText 
					android:text="" 
					android:id="@+id/editText18" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content">
				</EditText>
			</TableRow>
			<TableRow>
				<CheckBox 
					android:text="@string/answer19" 
					android:id="@+id/checkBox19" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content">
				</CheckBox>
				<EditText 
					android:text="" 
					android:id="@+id/editText19" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content">
				</EditText>
			</TableRow>
			<TableRow>
				<CheckBox 
					android:text="@string/answer20" 
					android:id="@+id/checkBox20" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content">
				</CheckBox>
				<EditText 
					android:text="" 
					android:id="@+id/editText20" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content">
				</EditText>
			</TableRow>
			<TableRow>
				<CheckBox 
					android:text="@string/answer21" 
					android:id="@+id/checkBox21" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content">
				</CheckBox>
				<EditText 
					android:text="" 
					android:id="@+id/editText21" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content">
				</EditText>
			</TableRow>
			<TableRow>
				<CheckBox 
					android:text="@string/answer22" 
					android:id="@+id/checkBox22" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content">
				</CheckBox>
				<EditText 
					android:text="" 
					android:id="@+id/editText22" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content">
				</EditText>
			</TableRow>
			<TableRow>
				<CheckBox 
					android:text="@string/answer23" 
					android:id="@+id/checkBox23" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content">
				</CheckBox>
				<EditText 
					android:text="" 
					android:id="@+id/editText23" 
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content">
				</EditText>
			</TableRow>
			
		
		</TableLayout>
	</HorizontalScrollView>
</ScrollView>